samples/_failures_safe/1761163805_0394bf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2c6fa1a3.c: In function ‘analyze_logs’:
./samples/SAFE/__tmp_2c6fa1a3.c:121:5: error: expected expression at end of input
  121 |     for (int i = count -
      |     ^~~
./samples/SAFE/__tmp_2c6fa1a3.c:121:5: error: expected declaration or statement at end of input
